lessons/gateway-api/canary-deployment/app-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v1
  namespace: app-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-v1
  template:
    metadata:
      labels:
        app: app-v1
    spec:
      containers:
      - name: nginx
        image: nginx
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
      volumes:
      - name: html
        configMap:
          name: app-v1-html
---
apiVersion: v1
kind: Service
metadata:
  name: app-v1-svc
  namespace: app-ns
spec:
  selector:
    app: app-v1
  ports:
  - port: 8080
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v2
  namespace: app-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-v2
  template:
    metadata:
      labels:
        app: app-v2
    spec:
      containers:
      - name: nginx
        image: nginx
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
      volumes:
      - name: html
        configMap:
          name: app-v2-html
---
apiVersion: v1
kind: Service
metadata:
  name: app-v2-svc
  namespace: app-ns
spec:
  selector:
    app: app-v2
  ports:
  - port: 8080
    targetPort: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: app-gateway
  namespace: app-ns
spec:
  gatewayClassName: nginx-gateway-class
  listeners:
  - name: http
    port: 8080
    protocol: HTTP
    hostname: "app.techiescamp.com"
